--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,16 +21,21 @@ requirements:
     - python >=3.6
     - pip
     - flake8
+    - setuptools
+    - wheel
 
   run:
     - python >=3.6
-    - clickclick >=1.2
-    - jsonschema >=2.5.1
-    - pyyaml >=5.1
-    - requests >=2.9.1
-    - inflection >=0.3.1
-    - flask >=1.0.4
-    - openapi-spec-validator >=0.2.4
+    - clickclick >=1.2,<21
+    - jsonschema >=2.5.1,<4
+    - pyyaml >=5.1,<6
+    - requests >=2.9.1,<3
+    - inflection >=0.3.1,<0.6
+    - flask >=1.0.4,<2
+    - openapi-spec-validator >=0.2.4,<0.4
+    - swagger-ui-bundle >=0.0.2,<0.1
+    - aiohttp >=2.3.10,<4
+    - aiohttp-jinja2 >=0.14.0,<2
 
 test:
   imports:
@@ -38,8 +43,12 @@ test:
     - connexion.apis
     - connexion.apps
     - connexion.decorators
-
+    - connexion.operations
+    - connexion.security
+  requires:
+    - pip
   commands:
+    - pip check
     - connexion --version
 
 about:
