--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - inflection >=0.3.1,<0.6
     - flask >=1.0.4,<2
     - openapi-spec-validator >=0.2.4,<0.4
+    - werkzeug >=1.0,<2.0
     - swagger-ui-bundle >=0.0.2,<0.1
     - aiohttp >=2.3.10,<4
     - aiohttp-jinja2 >=0.14.0,<2
@@ -45,6 +46,7 @@ test:
     - connexion.decorators
     - connexion.operations
     - connexion.security
+
   requires:
     - pip
   commands:
